# Morpheus

./: .dockerignore  .gitattributes  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  dependencies.yaml  morpheus.code-workspace  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/conda-default-env/: devcontainer-feature.json  install.sh
ci/scripts/: common.sh  python_checks.sh
cmake/: dependencies.cmake  protobuf-config.cmake
cmake/package_config/: register_api.cmake
conda/environments/: all_cuda-118_arch-x86_64.yaml  all_cuda-121_arch-x86_64.yaml  dev_cuda-118_arch-x86_64.yaml  dev_cuda-121_arch-x86_64.yaml  test_cuda-121_arch-x86_64.yaml
docker/: Dockerfile  run_container_dev.sh  run_container_release.sh
docs/source/: getting_started.md
examples/cyber_dev_day/: Dockerfile  docker-compose.yml  requirements.yaml
examples/doca/: run_udp_convert.py  (+1 more)
morpheus/: __init__.py  cli.py
scripts/: compare_data_files.py
tests/: __init__.py  base_test.py  conftest.py  run_tests.sh  test_abp.py  test_abp_kafka.py  test_add_class.py  test_add_classifications_stage.py  test_add_scores_stage.py  test_add_scores_stage_pipe.py  test_apb.py  test_cli.py  test_config.py  test_demo_socket.py  test_dfp_kafka.py  test_filter_detections_stage.py  test_filter_detections_stage_pipe.py  test_hammah.py  test_inference_stage.py  test_inference_worker.py  test_messages.py  test_monitor_stage.py  test_multi_message.py  test_nonlinear_pipeline.py  test_package.py  test_phishing.py  test_phishing_kafka.py  test_sid.py  test_sid_kafka.py  test_trigger_stage.py
(+243 files in other folders)
