[build-system]
requires = [
   "setuptools",
   "wheel",
   "nvidia-pyindex",
   "versioneer-518"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--no-header"

filterwarnings = [
   "ignore:coroutine 'BaseEventLoop.shutdown_asyncgens' was never awaited",
   'ignore:Initializing zero-element tensors is a no-op',
   'ignore:`np.MachAr` is deprecated \(NumPy 1.22\).',
   'ignore:`cupy.bool` is a deprecated alias for the Python scalar type `bool`. Please use the builtin `bool` or its corresponding NumPy scalar type `cupy.bool_` instead.',
   'ignore:numpy.ufunc size changed, may indicate binary incompatibility. Expected 216 from C header, got 232 from PyObject'
]
